# libigl-example-project

./: .gitignore  CMakeLists.txt  README.md  priority_queue_decimation.cpp  simple_decimation.cpp
data/: cube.off
include/: garland_simplification.h
src/: garland_simplification.cpp  garland_simplification.h  main.cpp
